Added fixes to VPS